PDA-8 Added: More Metrics.